# laba-2

./: check_deps.py  math_utils.py  requirements.txt  test_module.py  use_calculator.py
my_calculator/: __init__.py  calculator.py  utils.py
my_project/: pyproject.toml
my_project/src/my_package/: __init__.py  main.py
