# Файл конфигурации проекта (pyproject.toml)
#
# Современный стандарт для описания Python-проектов.
# Заменяет setup.py и requirements.txt для современных проектов.


# TODO: заполните метаданные проекта
[project]
name = "my_project"
version = "0.1.0"
description = "Пример проекта для лабораторной работы"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Student", email = "student@example.com"},
]

# TODO: добавьте зависимости с указанием версий
# dependencies = [
#     "requests>=2.28.0,<3.0.0",
#     "pydantic>=2.0.0",
# ]

# TODO: добавьте зависимости для разработки (опционально)
# [project.optional-dependencies]
# dev = [
#     "pytest>=7.0.0",
#     "black>=22.0.0",
# ]

# TODO: настройте инструменты сборки (опционально)
# [build-system]
# requires = ["setuptools>=61.0", "wheel"]
# build-backend = "setuptools.build_meta"


# TODO: настройте инструменты форматирования (опционально)
# [tool.black]
# line-length = 88
# target-version = ['py310']
