# Файл конфигурации проекта (pyproject.toml)
#
# Современный стандарт для описания Python-проектов.
# Заменяет setup.py и requirements.txt для современных проектов.


[project]
name = "my-package"
version = "0.1.0"
description = "Пример проекта для лабораторной работы по управлению зависимостями"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Искова Надежда", email = "nadezhda@example.com"},
]

# Основные зависимости проекта
dependencies = [
    "requests>=2.28.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
]

# Дополнительные зависимости для разработки
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Настройки сборки
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"